fix scrollbar always being shown in notif popup

--- a/core/static/core/header.scss
+++ b/core/static/core/header.scss
@@ -303,6 +303,7 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+            min-height: 20px;
             max-height: 120px;
             overflow-y: auto;
 
